// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No options 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: after 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <span>
    After
  </span>
</a>
`;

exports[`Option: before 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <span>
    Before
  </span>
</a>
`;

exports[`Option: children 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
    style={Object {}}
  >
    <div
      className="pe-button__wash"
    />
    <div
      className="pe-button__focus"
    />
    <span>
      Child
    </span>
  </div>
</a>
`;

exports[`Option: class 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: className 1`] = `
<a
  className="pe-button pe-text-button        className-x"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: content 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <div
    className="pe-button__content"
    style={Object {}}
  >
    <div
      className="pe-button__wash"
    />
    <div
      className="pe-button__focus"
    />
    <span>
      Content
    </span>
  </div>
</a>
`;

exports[`Option: element 1`] = `
<button
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: id 1`] = `
<a
  className="pe-button pe-text-button        "
  id="id-x"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
/>
`;

exports[`Option: tabindex 1`] = `
<a
  className="pe-button pe-text-button        "
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
  tabindex={3}
/>
`;
